--- a/HOME/index.html
+++ b/HOME/index.html
@@ -16,7 +16,7 @@
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
  
-<script src="js/vue.js">
+<script src="js/vue.js"></script> 
+
 
 </body>
-</html>
