--- a/HOME/index.html
+++ b/HOME/index.html
@@ -14,6 +14,42 @@
   {{ message }}
 </div>
 
+<div class="header">
+<h1>Gallery of your highness</h1>
+<h1>Eduard Serna</h1>
+<p>friendly</p>
+</div>
+ 
+ 
+<h1>Personal Profile Web page </h1>
+<h4>About Me:</h4>
+
+<h5>Name:</h5>
+<p>Eduard Florence L. Serna</p>
+<h5>Education / Achievements:</h5>
+<p>
+Senior High School: Learn & Explore Montessori School<br>
+College: Asia Pacific College<br>
+</p>
+<h5>Course:</h5>
+<p>Bachelor of Science in Information Technology</p>
+<h5>Experience:</h5>
+<p>
+- UI/UX<br>
+</p>
+<h5>Hobbies & Interests:</h5>
+<p>
+- Music<br>
+- Motorcycle riding<br>
+- Badminton<br>
+- Arts<br>
+- Online Games<br>
+</p>
+<h5>Goals In Life / Dream:</h5>
+<p>
+- become a soldier someday. <br>
+</p>
+
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
  
 <script src="js/vue.js"></script> 
