--- a/HOME/index.html
+++ b/HOME/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>My first Vue page</title> 
  <link rel= "stylesheet" href="css/style.css?version=0.1">
+ <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
 
@@ -14,12 +15,10 @@
   {{ message }}
 </div>
 
-<div class="header">
-<h1>Gallery of your highness</h1>
-<h1>Eduard Serna</h1>
-<p>friendly</p>
+<div class="container"> 
+<div class="column">
+  <img src="IMG_20200206_115433.jpg" style="width: 10%">
 </div>
- 
  
 <h1>Personal Profile Web page </h1>
 <h4>About Me:</h4>
