--- a/HOME/index.html
+++ b/HOME/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>My first Vue page</title> 
  <link rel= "stylesheet" href="css/style.css?version=0.1">
- <link rel="stylesheet" href="css/style2.css">
+ <link rel="stylesheet" href="css/style2.css?version=0.1">
 </head>
 <body>
 
@@ -15,43 +15,47 @@
   {{ message }}
 </div>
 
-<div class="container"> 
-<div class="column">
-  <img src="IMG_20200206_115433.jpg" style="width: 10%">
-</div>
- 
 <h1>Personal Profile Web page </h1>
-<h4>About Me:</h4>
-
-<h5>Name:</h5>
-<p>Eduard Florence L. Serna</p>
-<h5>Education / Achievements:</h5>
 <p>
-Senior High School: Learn & Explore Montessori School<br>
+ 
+About Me<br>
+Name: Eduard Florence L. Serna<br>
+ 
+Education<br>
+Elementary:Kapitan Jose Cardones Memorial Elementary School<br>
+Junior Highschool: Signal Village National High School<br>
+Senior Highschool: Learn & Explore Montessori School<br>
 College: Asia Pacific College<br>
+Course: IT<br>
+IT Experience: UI/UX, SQL, Python, Java,  <br>
+Hobbies & Interests: Playing Games, Listening to music, Reading Manga & Manhwa<br>
+Goals In Life / Dream: To become a rich millionare tito<br>
+Picture Gallery<br>
+ <div class="container">
+  <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Oceanogr%C3%A0fic_29102004.jpg" alt="Me" width="100" height="100"></div> 
+  <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Oceanogr%C3%A0fic_29102004.jpg" alt="Me" width="100" height="100"></div> 
+  <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Oceanogr%C3%A0fic_29102004.jpg" alt="Me" width="100" height="100"></div> 
+  <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Oceanogr%C3%A0fic_29102004.jpg" alt="Me" width="100" height="100"></div>    
+</div>
 </p>
-<h5>Course:</h5>
-<p>Bachelor of Science in Information Technology</p>
-<h5>Experience:</h5>
-<p>
-- UI/UX<br>
-</p>
-<h5>Hobbies & Interests:</h5>
-<p>
-- Music<br>
-- Motorcycle riding<br>
-- Badminton<br>
-- Arts<br>
-- Online Games<br>
-</p>
-<h5>Goals In Life / Dream:</h5>
-<p>
-- become a soldier someday. <br>
-</p>
+
+<div id="app">
+  {{ message }}
+</div>
+
+<div id="app2">
+
+  <div>
+    <img v-for="x in manyFoods" v-bind:src="x">
+  </div>
+
+</div>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
- 
-<script src="js/vue.js"></script> 
 
+<script src="js/vue.js"></script>
+
+<script src="js/vue2.js"></script>
 
 </body>
+</html>
